--- a/src/catchbot/catchbot/CMakeLists.txt
+++ b/src/catchbot/catchbot/CMakeLists.txt
@@ -13,7 +13,7 @@ catkin_package()
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_executable(catchbot_node src/catchbot_node.cpp)
+add_executable(catchbot_node src/catchbot_node.cpp src/kinematics.cpp)
 
 add_dependencies(catchbot_node ${catkin_EXPORTED_TARGETS})
 
