--- a/src/catchbot/catchbot/CMakeLists.txt
+++ b/src/catchbot/catchbot/CMakeLists.txt
@@ -15,6 +15,8 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_executable(catchbot_node src/catchbot_node.cpp src/kinematics.cpp)
 
+# add_executable(catchbot_node src/catchbot_node.cpp)
+
 add_dependencies(catchbot_node ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(catchbot_node ${catkin_LIBRARIES})
