throwing balls plugin

--- a/src/catchbot/catchbot/CMakeLists.txt
+++ b/src/catchbot/catchbot/CMakeLists.txt
@@ -3,7 +3,9 @@ project(catchbot)
 
 find_package(catkin REQUIRED COMPONENTS
 	roscpp
+	rospy
 	sensor_msgs
+	std_msgs
 	trajectory_msgs)
 
 catkin_package()
