--- a/src/catchbot/catchbot/package.xml
+++ b/src/catchbot/catchbot/package.xml
@@ -6,4 +6,6 @@
 	<maintainer email="ustcsiwei88@gmail.com">Siwei Feng</maintainer>
 	<license>MIT</license>
 	<buildtool_depend>catkin</buildtool_depend>
+	<build_depend>message_generation</build_depend>
+	<run_depend>message_runtime</run_depend>
 </package>
