--- a/src/catchbot/catchbot/CMakeLists.txt
+++ b/src/catchbot/catchbot/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(catchbot_node src/catchbot_node.cpp src/kinematics.cpp)
 
 # add_executable(catchbot_node src/catchbot_node.cpp)
 
-add_dependencies(catchbot_node ${catkin_EXPORTED_TARGETS})
+add_dependencies(catchbot_node ${catkin_EXPORTED_TARGETS} catchbot_generate_messages_cpp)
 
 target_link_libraries(catchbot_node ${catkin_LIBRARIES})
 
