fix submodule link

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "src/universal_robot"]
+[submodule "universal_robot"]
 	path = src/universal_robot
 	url = https://github.com/ros-industrial/universal_robot
 	branch = melodic-devel
-[submodule "src/robotiq_85_gripper"]
+[submodule "robotiq_85_gripper"]
 	path = src/robotiq_85_gripper
 	url = https://github.com/ustcsiwei88/robotiq_85_gripper
